--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -27,11 +27,24 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+
+    let currentYear = new Date().getFullYear();
+    const overNinteen = people.some((person) => (currentYear - person.year >= 19));
+
+    console.table(overNinteen);
     // Array.prototype.every() // is everyone 19 or older?
+    const allNinteen = people.every((person) => (currentYear - person.year >= 19));
+
+    console.table(allNinteen);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+
+    const comment = comments.find(comment => comment.id === 823423);
+      
+
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
